# anybytes

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INVENTORY.md  LICENSE  README.md
.github/workflows/: rust.yml
examples/: byte_area.rs  from_python.rs  pyanybytes.rs  pybytes.rs  python_winnow.rs  python_winnow_view.rs  quick_start.rs  try_unwrap_owner.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bytes_mut_ops.rs
scripts/: devtest.sh  miri.sh  preflight.sh  verify.sh
src/: area.rs  arena.rs  buffer.rs  bytes.rs  impls.rs  lib.rs  owners.rs  packed.rs  packedslice.rs  pyanybytes.rs  pybytes.rs  sources.rs  tests.rs  view.rs  winnow.rs
src/packed/: packedscalar.rs  packedslice.rs  packedstr.rs
tests/: area.rs  miri.rs
