[package]
name = "anybytes"
version = "0.19.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/triblespace/anybytes"
description = "A small library abstracting over bytes owning types in an extensible way."

[dependencies]
bytes = { version = "1.6.0", optional = true }
ownedbytes = { version = "0.7.0", optional = true }
memmap2 = { version = "0.9.4", optional = true }
zerocopy = { version = "0.8.14", optional = true, features = ["derive"] }
pyo3 = {version = "0.23.1", optional = true }

[dev-dependencies]
quickcheck = "1.0"

[features]
default = ["mmap", "zerocopy"]
bytes = ["dep:bytes"]
ownedbytes = ["dep:ownedbytes"]
mmap = ["dep:memmap2"]
zerocopy = ["dep:zerocopy"]
pyo3 = ["dep:pyo3"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
