[package]
name = "anybytes"
version = "0.19.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/triblespace/anybytes"
description = "A small library abstracting over bytes owning types in an extensible way."

[dependencies]
bytes = { version = "1.10.1", optional = true }
ownedbytes = { version = "0.9.0", optional = true }
memmap2 = { version = "0.9.5", optional = true }
zerocopy = { version = "0.8.26", optional = true, features = ["derive"] }
pyo3 = { version = "0.25.1", optional = true }
winnow = { version = "0.7.12", optional = true }

[dev-dependencies]
proptest = "1.7"
tempfile = "3.20"

[features]
default = ["mmap", "zerocopy"]
bytes = ["dep:bytes"]
ownedbytes = ["dep:ownedbytes"]
mmap = ["dep:memmap2"]
zerocopy = ["dep:zerocopy"]
pyo3 = ["dep:pyo3"]
winnow = ["dep:winnow"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[package.metadata.kani.flags]
default-unwind = "1"

[workspace.metadata.kani.flags]
default-unwind = "1"

[[example]]
name = "from_python"
required-features = ["pyo3"]

[[example]]
name = "pybytes"
required-features = ["pyo3"]
